# sudoku

./: .gitignore  README.md  package.json  rollup.config.js
src/: App.svelte  Board.svelte  Options.svelte  keyboard.ts  main.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: board.rs  main.rs
src-tauri/sudoku/: Cargo.toml
src-tauri/sudoku/benches/: generate.rs  remove_all.rs
src-tauri/sudoku/src/: lib.rs
src-tauri/sudoku/tests/: generate.rs
